test/compile_errors/stage1/obj/compile_time_division_by_zero.zig
const y = foo(0);
fn foo(x: u32) u32 {
    return 1 / x;
}

export fn entry() usize { return @sizeOf(@TypeOf(y)); }

// error
// backend=stage1
// target=native
//
// tmp.zig:3:14: error: division by zero
